--- a/features_pivot-table_pivot-panel_overview_JavaScript/index.html
+++ b/features_pivot-table_pivot-panel_overview_JavaScript/index.html
@@ -1,31 +1,27 @@
-<!-- layout.ejs -->
+<!doctype html>
+<html style="height:100%;font-size:14px;">
 
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <title>Express EJS template</title>
+    <meta name="spreadjs culture" content="ko-kr"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets/styles/gc.spread.sheets.excel2013white.css">
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets/dist/gc.spread.sheets.all.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-shapes/dist/gc.spread.sheets.shapes.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-pivot-addon/dist/gc.spread.pivot.pivottables.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/spread/source/data/pivot-data.js" type="text/javascript"></script>
-    <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-tablesheet/dist/gc.spread.sheets.tablesheet.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-resources-ko/dist/gc.spread.sheets.resources.ko.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/spread/source/js/license.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body class="container">
- 
-    <div id="header">
-     <%- include('header') %>   
+<body>
+
+    <div class="sample-tutorial">
+        <div id="ss" class="sample-spreadsheets"></div>
+        <div class="sample-panel">
+            <div id="panel"></div>
+        </div>
     </div>
-    <body>
-      <%- body %>
-    </body>
-    <section id="footer">
-     <hr>
-     <%- include('footer') %>
-    </section>
- 
 </body>
 </html>
