--- a/features_table-sheet_grouping_overview_JavaScript/index.html
+++ b/features_table-sheet_grouping_overview_JavaScript/index.html
@@ -2,16 +2,16 @@
 <html style="height:100%;font-size:14px;">
 
 <head>
+    <meta name="spreadjs culture" content="ko-kr" />
     <meta charset="utf-8" />
-    <meta name="spreadjs culture" content="ko-kr"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets/styles/gc.spread.sheets.excel2013white.css">
     <!-- Promise Polyfill for IE, https://www.npmjs.com/package/promise-polyfill -->
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets/dist/gc.spread.sheets.all.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-tablesheet/dist/gc.spread.sheets.tablesheet.min.js" type="text/javascript"></script>
-    <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-ganttsheet/dist/gc.spread.sheets.ganttsheet.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-resources-ko/dist/gc.spread.sheets.resources.ko.min.js" type="text/javascript"></script>
+    <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/spread/source/data/orderDataSource.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/spread/source/js/license.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -19,7 +19,14 @@
 <body>
     <div class="sample-tutorial">
         <div id="ss" class="sample-spreadsheets"></div>
-        <div id="optionContainer" class="optionContainer">
+        <div class="options-container">
+            <div class="option-row">
+                <label>Use the below buttons to group or ungroup.</label>
+            </div>
+            <div class="option-row">
+                <input type="button" value="Group" id="groupButton" />
+                <input type="button" value="Remove Group" id="removeGroupButton" />
+            </div>
         </div>
     </div>
 </html>
